# pySigma-backend-elasticsearch

./: .git-blame-ignore-revs  .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
devtools/: README.md  docker-compose.yml  dot_env
sigma/backends/elasticsearch/: __init__.py  elasticsearch.py  elasticsearch_elastalert.py  elasticsearch_eql.py  elasticsearch_esql.py  elasticsearch_lucene.py
sigma/pipelines/elasticsearch/: __init__.py  ecs.py  elasticsearch.py  kubernetes.py  macos.py  windows.py  zeek.py
tests/: test_backend_elasticsearch.py  test_backend_elasticsearch_connect.py  test_backend_elasticsearch_elastalert.py  test_backend_elasticsearch_eql.py  test_backend_elasticsearch_eql_connect.py  test_backend_elasticsearch_eql_correlations.py  test_backend_elasticsearch_esql.py  test_backend_elasticsearch_esql_connect.py  test_backend_elasticsearch_esql_correlations.py  test_backend_elasticsearch_lucene.py  test_backend_elasticsearch_lucene_connect.py  test_pipelines_elasticsearch.py  test_pipelines_kubernetes.py  test_pipelines_macos.py  test_pipelines_windows.py  test_pipelines_zeek.py  test_trailing_backslash_fix.py
