[tool.poetry]
name = "pySigma-backend-elasticsearch"
version = "1.1.6"
description = "pySigma Elasticsearch backend supporting Lucene, ES|QL (with correlations) and EQL queries"
readme = "README.md"
authors = ["Thomas Patzke <thomas@patzke.org>", "Hendrik Baecker <hb@process-zero.de>"]
license = "LGPL-3.0-only"
repository = "https://github.com/SigmaHQ/pySigma-backend-elasticsearch"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.9"
pysigma = "^0.11.7"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3,<9.0"
pytest-cov = ">=4,<7"
coverage = ">=6.4.1,<8.0.0"
requests = "^2.28.1"
defusedxml = "^0.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
disable = "missing-function-docstring,missing-module-docstring,line-too-long,too-many-lines"

[tool.pytest.ini_options]
minversion = "6.0"
python_files = "test_*.py"
addopts = "-vv --cov=sigma --cov-report term --cov-report xml:cov.xml"
testpaths = [
    "tests",
]
filterwarnings = [
    'ignore:Unverified HTTPS request'
]
